changing cat and tag

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: My Projects: A showcase
-permalink: /typography/
+permalink: /projects/
 ---
 
 <p>New page to play around.</p>
