--- a/myprojects.html
+++ b/myprojects.html
@@ -1,23 +1,16 @@
 ---
 layout: page
-title: Projects
-permalink: /projects/
+title: My Projects
+permalink: /myprojects/
 ---
 
-<p>New page to play around.</p>
-
-<hr>
-
-<h1 id="headings">Headings</h1>
-
-<h1>h1. Heading</h1>
-<h2>h2. Heading</h2>
-<h3>h3. Heading</h3>
-<h4>h4. Heading</h4>
-<h5>h5. Heading</h5>
-<h6>h6. Heading</h6>
-
-<hr>
+<p>Showcase of my </p>
+<div class="item">
+  <span class="project-title"><a href="#" target="_blank"><strong>Lumen | Thesis Project</strong></a></span> - <span class="project-tagline">A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.</span>
+                    <!-- <video width="400" controls>
+                      <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
+                    </video> -->
+</div><!--//item-->
 
 <h1 id="paragraph">Paragraph</h1>
 
