--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,13 @@ permalink: /projects/
 ---
 
 <div>
-  <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h1>
+  <h2><img src="/assets/projects/lumen.png" width="100" height="100">Lumen | Undergraduate Thesis Project [2016-2017]</h1>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
-  <video width="400" controls>
+<!--   <video width="400" controls>
     <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
-  </video>
+  </video> -->
 </div>
 
 <hr>
@@ -21,6 +21,15 @@ permalink: /projects/
   <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. <strong>More details can be found in our paper in this link</strong>
   </span>
   <p><emp>Developed by a team of 3.</emp></p>
+</div>
+
+<hr>
+
+<div>
+  <h2><img src="/assets/projects/SynchroCity.png" width="100" height="100"> Synchro City [2017]</h2>
+  <span>
+  </span>
+  <p><emp>Developed by a team of 2.</emp></p>
 </div>
 
 <hr>
