--- a/projects.html
+++ b/projects.html
@@ -67,9 +67,10 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
-  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, masks out the background, draws convex envelope around the object, tracks its path from the center of that object.<strong>There is a gif demo in the link!</strong>
+  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, masks out the background, draws convex envelope around the object, tracks its path from the center of that object.
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
+  <img src="assets/projects/armtracker.gif" height="250" width="250">
 </div>
 
 <hr>
