--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ permalink: /projects/
 ---
 
 <div>
-  <h2><img src="/assets/projects/lumen.png" width="100" height="100">Lumen | Undergraduate Thesis Project [2016-2017]</h1>
+  <h2><img src="/assets/projects/lumen.png" width="75px" height="75px">Lumen | Undergraduate Thesis Project [2016-2017]</h1>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
@@ -18,7 +18,7 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/ " target="_blank">Recurrent Neural Networks for Toxic Comment Classification [2018]</a></h2>
-  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. <strong>More details can be found in our paper in this link</strong>
+  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ " target"_blank">here</a>
   </span>
   <p><emp>Developed by a team of 3.</emp></p>
 </div>
@@ -26,7 +26,7 @@ permalink: /projects/
 <hr>
 
 <div>
-  <h2><img src="/assets/projects/SynchroCity.png" width="100" height="100"> Synchro City [2017]</h2>
+  <h2><img src="/assets/projects/SynchroCity.png" width="75px" height="75px"> Synchro City [2017]</h2>
   <span>
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
@@ -70,7 +70,7 @@ permalink: /projects/
   <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, masks out the background, draws convex envelope around the object, tracks its path from the center of that object.
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
-  <img src="assets/projects/armtracker.gif" height="250" width="250">
+  <img src="/assets/projects/armtracker.gif" style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;">
 </div>
 
 <hr>
