added table in about page

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ permalink: /projects/
 ---
 
 <div>
-  <h2><img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">Lumen | Undergraduate Thesis Project [2016-2017]</h1>
+  <h2><img src="/assets/projects/lumen.png" style="width: 100px; height: 100px; float: left;">Lumen | Undergraduate Thesis Project [2016-2017]</h1>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
@@ -26,7 +26,7 @@ permalink: /projects/
 <hr>
 
 <div>
-  <h2><img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;"> Synchro City [2017]</h2>
+  <h2><img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px; float: left;"> Synchro City [2017]</h2>
   <span>
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
