added table in about page

--- a/projects.html
+++ b/projects.html
@@ -67,10 +67,12 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
-  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, masks out the background, draws convex envelope around the object, tracks its path from the center of that object.
+  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
-  <img src="/assets/projects/armtracker.gif" style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;">
+  <video style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;">
+    <source src="/assets/projects/ArmTracker.mov" type="video/mp4">
+  </video>
 </div>
 
 <hr>
