--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@ permalink: /projects/
 ---
 
 <div>
-  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px; float: left;"><h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
+  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px; float: left;">
+  <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
@@ -26,7 +27,8 @@ permalink: /projects/
 <hr>
 
 <div>
-  <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px; float: left;"><h2> Synchro City [2017]</h2>
+  <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px; float: left;">
+  <h2> Synchro City [2017]</h2>
   <span>
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
@@ -70,9 +72,9 @@ permalink: /projects/
   <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
-  <video style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;" controls>
+  <!-- <video style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;" controls>
     <source src="/assets/projects/ArmTracker.mp4" type="video/mp4">
-  </video>
+  </video> -->
 </div>
 
 <hr>
