--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ permalink: /projects/
 ---
 
 <div>
-  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px; float: left;">
+  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
@@ -27,7 +27,7 @@ permalink: /projects/
 <hr>
 
 <div>
-  <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px; float: left;">
+  <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;">
   <h2> Synchro City [2017]</h2>
   <span>
   </span>
@@ -54,6 +54,18 @@ permalink: /projects/
 <hr>
 
 <div>
+  <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
+  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
+  </span>
+  <p><emp>Developed by a team of 2.</emp></p>
+  <video style="display: block; margin: 0 auto;" controls>
+    <source src="/assets/projects/ArmTracker.mp4" type="video/mp4">
+  </video>
+</div>
+
+<hr>
+
+<div>
   <h2><a href="https://github.com/ShehabMMohamed/Distributed-Systems" target="_blank">Distributed Image Viewer [2016]</a></h2>
   <span>A peer-to-peer distributed systems that allows users of different machines in the same network to send encrypted images to each other with a view counter and access privileges. Its core functionality is the following:
     <ol>
@@ -63,18 +75,6 @@ permalink: /projects/
     </ol>
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
-</div>
-
-<hr>
-
-<div>
-  <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
-  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
-  </span>
-  <p><emp>Developed by a team of 2.</emp></p>
-  <!-- <video style="width: 400px; height: 400px; display: block; margin-left: auto; margin-right: auto;" controls>
-    <source src="/assets/projects/ArmTracker.mp4" type="video/mp4">
-  </video> -->
 </div>
 
 <hr>
