--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,21 @@ permalink: /projects/
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
-  <p><emp>Developed by a team of 4.</emp></p>
+    <p><emp>Developed by a team of 4.</emp></p>
+    <div>
+      <div class="vid" style="display: inline-block; width: 250px; height: 250px; margin: 0 10px 10px 0;">
+        Lumen: Distracted Driver Classifier
+        <video controls>
+          <source src="https://drive.google.com/open?id=0BzF5BeFv5ZRjRkhqV0hacWxxOU0" type="video/mp4">
+        </video>
+      </div>
+      <div class="vid" style="display: inline-block; width: 250px; height: 250px; margin: 0 10px 10px 0;">
+        Lumen: Navigation
+        <video controls>
+          <source src="https://drive.google.com/open?id=1uXWiBiHKT7RpSHp01vAQQQA2h4GpBtTK" type="video/mp4">
+        </video>
+      </div>
+    </div>
 <!--   <video width="400" controls>
     <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
   </video> -->
@@ -18,8 +32,8 @@ permalink: /projects/
 <hr>
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/ " target="_blank">Recurrent Neural Networks for Toxic Comment Classification [2018]</a></h2>
-  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ " target"_blank">here</a>
+  <h2><a href="https://github.com/ShehabMMohamed/ToxicCommentClassification" target="_blank">Recurrent Neural Networks for Toxic Comment Classification [2018]</a></h2>
+  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ToxicCommentClassification/blob/master/NLP%20Paper.pdf" target"_blank">here</a>
   </span>
   <p><emp>Developed by a team of 3.</emp></p>
 </div>
@@ -28,8 +42,8 @@ permalink: /projects/
 
 <div>
   <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;">
-  <h2> Synchro City [2017]</h2>
-  <span>
+  <h2>Synchro City [2017]</h2>
+  <span>Embedded Systems Project: A simulation of cars manuevering in a city, detecting obstacles, following certain paths that don't conflict with each other to avoide collision. 
   </span>
   <p><emp>Developed by a team of 4.</emp></p>
 </div>
@@ -46,7 +60,7 @@ permalink: /projects/
 
 <div>
   <h2>Kaggle Competition: Intel and MovileODT Cancer Screening [2017]</h2>
-  <span>
+  <span>Participated in Kaggle competition with a colleague on developing a machine learning algorithm that learns to accurately identify a cancerous infection type based on images to help identifying early stages of infection. Team [Amr &amp; Shehab]'s last contribution ranked 24th out of 703.
   </span>
   <p><emp>Developed by a team of 2.</emp></p>
 </div>
