--- a/projects.html
+++ b/projects.html
@@ -11,13 +11,13 @@ permalink: /projects/
   </span>
     <p><emp>Developed by a team of 4.</emp></p>
     <div>
-      <div class="vid" style="display: inline-block; width: 250px; height: 250px; margin: 0 10px 10px 0;">
+      <div class="vid">
         Lumen: Distracted Driver Classifier
         <video controls>
           <source src="https://drive.google.com/open?id=0BzF5BeFv5ZRjRkhqV0hacWxxOU0" type="video/mp4">
         </video>
       </div>
-      <div class="vid" style="display: inline-block; width: 250px; height: 250px; margin: 0 10px 10px 0;">
+      <div class="vid">
         Lumen: Navigation
         <video controls>
           <source src="https://drive.google.com/open?id=1uXWiBiHKT7RpSHp01vAQQQA2h4GpBtTK" type="video/mp4">
