--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ permalink: /projects/
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
     <p><emp>Developed by a team of 4.</emp></p>
-    <div>
+<!--     <div>
       <div class="vid">
         Lumen: Distracted Driver Classifier
         <video controls>
@@ -23,7 +23,7 @@ permalink: /projects/
           <source src="https://drive.google.com/open?id=1uXWiBiHKT7RpSHp01vAQQQA2h4GpBtTK" type="video/mp4">
         </video>
       </div>
-    </div>
+    </div> -->
 <!--   <video width="400" controls>
     <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
   </video> -->
