Uploaded stuff to youtube

--- a/projects.html
+++ b/projects.html
@@ -8,34 +8,19 @@ permalink: /projects/
   <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
+    <p><a href="https://youtu.be/xRzlYiH8sg4" target="_blank">Lumen - Distracted Driver Classifier [demo] </a></p>
+    <p><a href="https://youtu.be/wY3botkMZ-A" target="_blank">Lumen - Navigation [demo]</a></p>
   </span>
-    <p><emp>Developed by a team of 4.</emp></p>
-<!--     <div>
-      <div class="vid">
-        Lumen: Distracted Driver Classifier
-        <video controls>
-          <source src="https://drive.google.com/open?id=0BzF5BeFv5ZRjRkhqV0hacWxxOU0" type="video/mp4">
-        </video>
-      </div>
-      <div class="vid">
-        Lumen: Navigation
-        <video controls>
-          <source src="https://drive.google.com/open?id=1uXWiBiHKT7RpSHp01vAQQQA2h4GpBtTK" type="video/mp4">
-        </video>
-      </div>
-    </div> -->
-<!--   <video width="400" controls>
-    <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
-  </video> -->
+    <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
 
 <hr>
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/ToxicCommentClassification" target="_blank">Recurrent Neural Networks for Toxic Comment Classification [2018]</a></h2>
-  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ToxicCommentClassification/blob/master/NLP%20Paper.pdf" target"_blank">here</a>
+  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ToxicCommentClassification/blob/master/NLP%20Paper.pdf" target="_blank">here</a>
   </span>
-  <p><emp>Developed by a team of 3.</emp></p>
+  <p align="center"><emp>Developed by a team of 3.</emp></p>
 </div>
 
 <hr>
@@ -43,9 +28,10 @@ permalink: /projects/
 <div>
   <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;">
   <h2>Synchro City [2017]</h2>
-  <span>Embedded Systems Project: A simulation of cars manuevering in a city, detecting obstacles, following certain paths that don't conflict with each other to avoide collision. 
+  <span>Embedded Systems Project: A simulation of cars manuevering in a city, detecting obstacles, following certain paths that don't conflict with each other to avoide collision. It won the in-class best embedded systems project award.
+    <p><a href="https://youtu.be/ndS_9Wjfhs8" target="_blank">Synchro City [demo]</a></p>
   </span>
-  <p><emp>Developed by a team of 4.</emp></p>
+  <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
 
 <hr>
@@ -62,7 +48,7 @@ permalink: /projects/
   <h2>Kaggle Competition: Intel and MovileODT Cancer Screening [2017]</h2>
   <span>Participated in Kaggle competition with a colleague on developing a machine learning algorithm that learns to accurately identify a cancerous infection type based on images to help identifying early stages of infection. Team [Amr &amp; Shehab]'s last contribution ranked 24th out of 703.
   </span>
-  <p><emp>Developed by a team of 2.</emp></p>
+  <p align="center"><emp>Developed by a team of 2.</emp></p>
 </div>
 
 <hr>
@@ -71,7 +57,7 @@ permalink: /projects/
   <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
   <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
   </span>
-  <p><emp>Developed by a team of 2.</emp></p>
+  <p align="center"><emp>Developed by a team of 2.</emp></p>
   <video style="display: block; margin: 0 auto;" controls>
     <source src="/assets/projects/ArmTracker.mp4" type="video/mp4">
   </video>
@@ -88,7 +74,7 @@ permalink: /projects/
       <li>View Downloaded/Allowed-Access Images' list.</li>
     </ol>
   </span>
-  <p><emp>Developed by a team of 4.</emp></p>
+  <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
 
 <hr>
@@ -97,7 +83,7 @@ permalink: /projects/
   <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2015]</a></h2>
   <span>A Perl application that takes a word document (.docx) and pares the main elements to generate the corresponding .HTML and .CSS files!
   </span>
-  <p><emp>Developed by a team of 3.</emp></p>
+  <p align="center"><emp>Developed by a team of 3.</emp></p>
 </div>
 
 <hr>
