adding table of demos

--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,14 @@ permalink: /projects/
   <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
   <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
-    <p><a href="https://youtu.be/xRzlYiH8sg4" target="_blank">Lumen - Distracted Driver Classifier [demo] </a></p>
-    <p><a href="https://youtu.be/wY3botkMZ-A" target="_blank">Lumen - Navigation [demo]</a></p>
+    <table>
+      <tr>
+        <a href="https://youtu.be/xRzlYiH8sg4" target="_blank">Lumen - Distracted Driver Classifier [demo] </a>
+      </tr>
+      <tr>
+        <a href="https://youtu.be/wY3botkMZ-A" target="_blank">Lumen - Navigation [demo]</a>
+      </tr>
+    </table>
   </span>
     <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
