adding table of demos

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ permalink: /projects/
 <div>
   <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
-  <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
+  <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> deployed on a RaspberryPi 3 equipped with a Pi Camera that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
   </span>
     <p align="center"><emp>Developed by a team of 4.</emp></p>
     <ul>
@@ -35,16 +35,20 @@ permalink: /projects/
   <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;">
   <h2>Synchro City [2017]</h2>
   <span>Embedded Systems Project: A simulation of cars manuevering in a city, detecting obstacles, following certain paths that don't conflict with each other to avoide collision. It won the in-class best embedded systems project award.
-    <p><a href="https://youtu.be/ndS_9Wjfhs8" target="_blank">Synchro City [demo]</a></p>
   </span>
   <p align="center"><emp>Developed by a team of 4.</emp></p>
+    <ul>
+      <li>
+        <a href="https://youtu.be/ndS_9Wjfhs8" target="_blank">Synchro City [demo]</a>
+      </li>
+    </ul>
 </div>
 
 <hr>
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/TinyImageNet-KaggleCompetition" target="_blank">In-Class Kaggle Competition: TinyImageNet [2017]</a></h2>
-  <span>
+  <span>Designed a Classifier on top of a pretrained Convolution Neural Network model, trained it and tested its accuracy which gave the 2nd highest rank in class with a validation accuracy of 83.3%.
   </span>
 </div>
 
@@ -61,7 +65,7 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
-  <span>A Computer Vision project where me and colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
+  <span>A Computer Vision project where me and a colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
   </span>
   <p align="center"><emp>Developed by a team of 2.</emp></p>
   <video style="display: block; margin: 0 auto;" controls>
@@ -87,7 +91,7 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2015]</a></h2>
-  <span>A Perl application that takes a word document (.docx) and pares the main elements to generate the corresponding .HTML and .CSS files!
+  <span>A Perl application that takes a word document (.docx) and prases the main elements to generate the corresponding .HTML and .CSS files!
   </span>
   <p align="center"><emp>Developed by a team of 3.</emp></p>
 </div>
