--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@ permalink: /projects/
 
 <div>
   <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2015]</a></h2>
-  <span>A Perl application that takes a word document (.docx) and prases the main elements to generate the corresponding .HTML and .CSS files!
+  <span>A Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files!
   </span>
   <p align="center"><emp>Developed by a team of 3.</emp></p>
 </div>
