--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@ permalink: /projects/
 <hr>
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2015]</a></h2>
+  <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2016]</a></h2>
   <span>A Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files!
   </span>
   <p align="center"><emp>Developed by a team of 3.</emp></p>
@@ -98,3 +98,9 @@ permalink: /projects/
 
 <hr>
 
+<div>
+  <h2><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">MIPS pipelined CPU Simulator [2015]</a></h2>
+  <span>Computer Architecture Project: A Desktop GUI application of a MIPS pipelined CPU with BTB simulator that reads MIPS code and shows the cycle of each instruction (Fetch -> Decode -> Execute -> Data Memory -> Write Back) and the content of registers after each cycle.
+  </span>
+  <p align="center"><emp>Developed by a team of 4.</emp></p>
+</div>
