--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@ permalink: /projects/
 <hr>
 
 <div>
-  <h2><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">MIPS pipelined CPU Simulator [2015]</a></h2>
+  <h2><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">MIPS Pipelined CPU Simulator [2015]</a></h2>
   <span>Computer Architecture Project: A Desktop GUI application of a MIPS pipelined CPU with BTB simulator that reads MIPS code and shows the cycle of each instruction (Fetch -> Decode -> Execute -> Data Memory -> Write Back) and the content of registers after each cycle.
   </span>
   <p align="center"><emp>Developed by a team of 4.</emp></p>
